Refactored the entrypoint.sh to make it testable and enable it to handle globbing in the path and multiple files and directories as input. Added tests, and the corresponding test_data. Added a ci-workflow to run the tests on every pull request. Changed the action.yml file to make the path parameter optional, because we now support linting all the files.

--- a/action.yml
+++ b/action.yml
@@ -3,8 +3,8 @@ description: 'Execute lint check on Bash scripts'
 author: 'ep-mobile'
 inputs:
   path:
-    description: 'Path to the bash script that needs the lint check.'
-    required: true
+    description: 'Path to the bash scripts that need the lint check.'
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
