Update pr workflow to update shellcheck to latest

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -10,6 +10,13 @@ jobs:
   run_tests:
     runs-on: ubuntu-latest
     steps:
+      - name: Update Shellcheck
+        run: |
+          # Update shellcheck to the latest by downloading the binary (0.7.0 instead of default 0.4)
+          scversion="latest"
+          wget -qO- "https://storage.googleapis.com/shellcheck/shellcheck-${scversion?}.linux.x86_64.tar.xz" | tar -xJv
+          sudo cp "shellcheck-${scversion}/shellcheck" /usr/bin/
+          shellcheck -V
       - name: Checkout
         uses: actions/checkout@v1
       - name: Update Shellcheck
