Locked down the version of shellcheck in action's dockerfile as well as the action workflow to test the action. Any new versions of alpine, shellcheck or future dependencies will need to be tested prior to release

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      - name: Update Shellcheck
+        run: ./src/download_shellcheck.sh
       - name: Run tests
         run: ./tests/test_runner
         shell: bash
