--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
     - name: Checkout 
       uses: actions/checkout@v1
+
     - name: Get version
       id: app-version
       run: echo ::set-output name=VERSION::$(./docs/version)
+
     - name: Tag commit and release
       uses: ncipollo/release-action@v1
       with:
@@ -21,3 +23,7 @@ jobs:
         commit: master
         name: Shell Linter v0.3.0
         bodyFile: ./docs/release_notes/v0.3.0.md
+
+    - name: Update latest tag
+      run: ./src/tagging.sh ${{ secrets.GITHUB_TOKEN }}
+    
