--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,10 @@ inputs:
     description: 'Specify files or folders to exclude during scan.'
     required: false
     default: ''
-
+  exclude:
+    description: 'Specify shellcheck issues to exclude during scan.'
+    required: false
+    default: ''
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -22,6 +25,7 @@ runs:
     - ${{ inputs.path }}
     - ${{ inputs.severity }}
     - ${{ inputs.exclude-paths}}
+    - ${{ inputs.exclude }}
 branding:
   icon: 'check-circle'
   color: 'green'
