Added support for excluding files and folders from linting

--- a/action.yml
+++ b/action.yml
@@ -10,12 +10,17 @@ inputs:
     description: 'Specify minimum severity of errors to consider.'
     required: false
     default: 'style'
+  exclude_paths:
+    description: 'Exclude files and folders from linting'
+    required: false
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
     - ${{ inputs.path }}
     - ${{ inputs.severity }}
+    - ${{ inputs.exclude_paths}}
 branding:
   icon: 'check-circle'
   color: 'green'
