Updated the README to mention the scripts that are scanned by default. Also, set a default value for the excluded_paths parameter.

--- a/action.yml
+++ b/action.yml
@@ -11,8 +11,9 @@ inputs:
     required: false
     default: 'style'
   excluded_paths:
-    description: 'Exclude files and folders from linting.'
+    description: 'Specify files or folders to exclude during scan.'
     required: false
+    default: ''
 
 runs:
   using: 'docker'
