Updated the exclude issues feature upon PR feedback and updated the naming of the feature in the README and scripts

--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,7 @@ inputs:
     description: 'Specify files or folders to exclude during scan.'
     required: false
     default: ''
-  exclude:
+  exclude-issues:
     description: 'Specify shellcheck issues to exclude during scan.'
     required: false
     default: ''
@@ -25,7 +25,7 @@ runs:
     - ${{ inputs.path }}
     - ${{ inputs.severity }}
     - ${{ inputs.exclude-paths}}
-    - ${{ inputs.exclude }}
+    - ${{ inputs.exclude-issues }}
 branding:
   icon: 'check-circle'
   color: 'green'
